Modernize code with var, records, and List.of()